[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compile-bciiot"
version = "0.1.0"
description = "Blockchain-assisted secure distributed compilation prototype for Cognitive-IIoT."
authors = [{name = "Suman Majumder"}]
requires-python = ">=3.9"
dependencies = ["networkx>=3.2.1"]

[tool.setuptools.packages.find]
where = ["src"]
